# devsuite-typescript

./: .commitlintrc.js  .commitlintrc.json  .env  .eslintignore  .eslintrc.base.json  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  .versionrc.json  App.tsx  Cargo.toml  LICENSE  README.md  SentryApp.native.tsx  SentryApp.web.tsx  app.config.js  app.json  eas.json  eslint.config.js  google-services.base.json  index.js  jest.preset.js  jest.preset.ts  metro.config.js  nx.json  package.json  postcss.config.cjs  postcss.config.js  project.json  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.workspace.ts  workspace.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  helm.yml  lint.yml  release.yml  test.yml
.husky/: commit-msg  pre-commit
apps/cli/: jest.config.ts  package.json  project.json
apps/cli-e2e/: jest.config.ts  project.json  tsconfig.spec.json
apps/dispatcher/: .env  jest.config.ts  project.json  tsconfig.json
apps/dispatcher-e2e/: .eslintrc.json  jest.config.ts  project.json  tsconfig.json
apps/endoscope/: .eslintrc.json  .swcrc  jest.config.ts  postcss.config.cjs  (+8 more)
apps/endoscope-e2e/: .eslintrc.json  cypress.config.cjs  cypress.config.ts  project.json  tsconfig.e2e.json  tsconfig.json
crates/secretarium/: Cargo.toml  README.md  project.json
patches/: @nrwl+expo+14.0.0.patch  git-rev-sync+3.0.2.patch
scripts/: buildFetcher.js
services/: notifications.ts
tools/: babel-plugin-dotenv-inject.js  tsconfig.tools.json
(+462 files in other folders)
