[package]
name = "secretarium"
version = "0.0.2"
edition = "2021"
description = "This crate provides tools for building and using Secretarium-based applications"
license = "MIT"
homepage = "https://secretarium.com"
documentation = "https://secretarium.com"
repository = "https://github.com/secretarium/devsuite-typescript.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
